<resources>
    <string name="app_name">All Video Downloader 2023</string>
    <string name="or">OR</string>
    <string name="how_to_download">How to Download</string>
    <string name="Download">Download</string>
    <string name="second_how_too">2. Share with All Video Downloader &amp; Saver</string>
    <string name="or_download_using_copied_link">or Download using copied link</string>
    <string name="fourth_how_too">2. Open All Video Downloader &amp; Saver</string>
    <string name="Title">Title</string>
    <string name="SizeUnknown">Size : unkown</string>
    <string name="Preview">Preview</string>
    <string name="next">Next</string>
    <string name="profileInfo">Set your profile picture</string>
    <string name="chooseData">Choose from device</string>
</resources>