<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".Activity.ProfilePicActivity">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@drawable/profilebg">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circularimg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/anim5"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileInfo"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/_25dp"
                android:textStyle="bold"
                android:textSize="@dimen/_16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profileRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/profile_item_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="#B3FFFFFF"
                android:fontFamily="@font/poppins"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_15dp"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/mTxtChoosePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseData"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/_5dp"
                android:layout_marginBottom="@dimen/_15dp"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/allow_permissions_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_70dp"
                android:layout_marginVertical="@dimen/_25dp"
                android:background="@drawable/gradientbt"
                android:fontFamily="@font/poppins"
                android:padding="12dp"
                android:text="Next"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</layout>