<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/thumbnil_no_preview"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="@string/Title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="12dp"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVidSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="110dp"
            android:layout_weight="1"
            android:text="@string/SizeUnknown"
            app:layout_constraintLeft_toRightOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_name" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="2.2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_poster"
            card_view:layout_constraintTop_toBottomOf="@+id/txtVidSize">

            <!--            <Button-->
            <!--                android:id="@+id/btnPreview"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:drawableTint="@color/white"-->
            <!--                android:paddingRight="2dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="right"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@color/colorPrimary"-->
            <!--                android:drawableLeft="@drawable/ic_baseline_preview_24"-->
            <!--                android:drawablePadding="5sp"-->
            <!--                android:padding="5dp"-->
            <!--                android:text="@string/Preview" />-->

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnPreview"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/main_color3"
                android:text="@string/Preview"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:neumorph_backgroundColor="@color/main_color3"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearanc" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnDownload"
                style="@style/Widget.Neumorph.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:background="@color/main_color3"
                android:text="@string/Download"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                app:neumorph_backgroundColor="@color/main_color3"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearanc" />


            <!--            <Button-->
            <!--                android:textColor="@color/white"-->
            <!--                android:layout_marginLeft="2dp"-->
            <!--                android:drawableTint="@color/white"-->
            <!--                android:id="@+id/btnDownload"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="right"-->
            <!--                android:layout_weight="1"-->
            <!--                android:background="@color/colorPrimary"-->
            <!--                android:drawableLeft="@drawable/ic_download"-->
            <!--                android:drawablePadding="5sp"-->
            <!--                android:padding="5dp"-->
            <!--                android:text="@string/Download" />-->

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>