<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/LLHowToLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/et_back_one"
        android:elevation="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHowToHeadOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/how_to_download"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/LLHowToOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_back_one"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHowTo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:text="1. Open App"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/im_howto1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tvHowTo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/second_how_too"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/im_howto2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/tvHowToHeadTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/or_download_using_copied_link"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/et_back_one"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHowTo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:text="1. Open App"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/im_howto3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tvHowTo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/fourth_how_too"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/im_howto4"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</layout>